# g2h

./: Cargo.toml  README.md
.github/workflows/: CI.yml  Publish.yml
docs/: example.md  usage.md
example/hello-world/: Cargo.toml  build.rs
example/hello-world/protos/: hello-world.proto
example/hello-world/src/: main.rs
example/hello-world/tests/: enum_serialization_tests.rs  g2h_internals_tests.rs  generated_code_verification.rs  snake_case_consistency_test.rs
src/: lib.rs  vercheck.rs
