[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-world"
path = "src/main.rs"



[dependencies]
tonic = "0.14.0"
prost = "0.14"
tonic-prost = "0.14" 
axum = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
http = "1.3.1"
tower = "0.5.2"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
heck = "0.5.0"

[build-dependencies]
g2h = { path = "../../" }
tonic-prost-build = "0.14"
tonic-build = "0.14"
prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
